--- a/articles/98e889d620eca7.md
+++ b/articles/98e889d620eca7.md
@@ -3,7 +3,7 @@ title: "高速に悪性技術的負債が蓄積される世界に備えて"
 emoji: "🎉"
 type: "idea" # tech: 技術記事 / idea: アイデア
 topics: ["ai","llm","技術的負債","開発組織"]
-published: false
+published: true
 publication_name: "tacoms"
 ---
 
